--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "mapbox-gl": "^3.7.0",
-    "proj4": "^2.12.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lottie": "^1.2.4",
-    "react-router-dom": "^6.27.0",
-    "shpjs": "^6.1.0"
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
