--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "aws-amplify": "^6.6.5",
     "axios": "^1.7.7",
     "mapbox-gl": "^3.7.0",
